[tool.poetry]
name = "puzzles"
version = "0.1.0"
description = "Interesting Programming Puzzles"
authors = ["Paul Wang"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.2"
pre-commit = "^3.6.2"
ruff = "0.3.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
