[tool.poetry]
name = "puzzles"
version = "0.1.0"
description = "Interesting Programming Puzzles"
authors = ["Paul Wang"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.6.2"
ruff = "0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
